deploy/results/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: results
  name: results
spec:
  replicas: 1
  selector:
    matchLabels:
      app: results
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: results
    spec:
      containers:
      - image: schoolofdevops/vote-result:latest
        name: vote-result
        resources: {}
status: {}
