deploy/results/base/services.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: results
  name: results
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: results
status:
  loadBalancer: {}
