deploy/results/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: results
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - secretName: tls-secret
  rules:
  - host: "results.tibchannels.com"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend: 
          service:
            name: results
            port:
              number: 80
